core/tests/const_generics/usize_even_fail.stderr
error[E0080]: evaluation of `avail_core::const_generic_asserts::UsizeEven::<1>::OK` failed
 --> src/const_generic_asserts.rs
  |
  |     pub const OK: () = assert!(N % 2 == 0, "must be even");
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'must be even', $DIR/src/const_generic_asserts.rs:12:24
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn const_generic_even::<1>`
 --> tests/const_generics/usize_even_fail.rs:8:2
  |
8 |     const_generic_even::<1>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
